# vectober

./: CMakeLists.txt  README.md
bench/: CMakeLists.txt  RVec2Operators.h  bench.cpp  benchmarks.hpp  rvec.cpp  rvec2.cpp  smallvector.cpp  vec_operators.hpp
cmake/: FindGBench.cmake
src/: AlignOf.h  CMakeLists.txt  Compiler.h  RAdoptAllocator.hxx  RIntegerSequence.hxx  RVec.cxx  RVec.hxx  RVec2.cpp  RVec2.h  SmallVector.cpp  SmallVector.h  TypeTraits.hxx
